flapivor/tests/m3/hopix/typechecker/good/47-pattern-matching-11.hopix
type `<a, b> = `(a, b)
type P = { l : Int }

val x : Int = case `<P, Int>({ l = 22 }<>, 33) {
  `<P, Int>( { l = x : Int }<>, (y : Int)) => x + y
}