flapivor/tests/m3/hopix/typechecker/bad/28-record-02.hopix
type T = { k : Int }

val x : T = { l = 0 }<>